--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ canvas {
   align-items: center;
 }
 
+.start-screen {
+  background-color: #1f1f1f;
+  color: #1f1f1f;
+  width: 720px;
+  height: 480px;
+  border-color: black;
+  border-radius: 2px;
+  border-width: 2px;
+  border-style: dashed;
+}
+
 .screen {
   width: fit-content;
   /* aspect-ratio: 1; */
